# rust-blueprint

./: .gitignore  .taplo.toml  Cargo.toml
.config/: zhazba.config.d.lua  zhazba.config.lua
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/zhazba/: Cargo.toml
crates/zhazba/src/: args.rs  main.rs
crates/zhazba_buffer/: Cargo.toml
crates/zhazba_buffer/src/: buffer.rs
crates/zhazba_config/: Cargo.toml
crates/zhazba_config/src/: lib.rs  lua.rs
crates/zhazba_editor/: Cargo.toml
crates/zhazba_editor/src/: editor.rs
crates/zhazba_lua/: Cargo.toml
crates/zhazba_lua/src/: lib.rs
crates/zhazba_models/: Cargo.toml
crates/zhazba_models/src/: action.rs  cell.rs  lib.rs
crates/zhazba_theme/: Cargo.toml
crates/zhazba_theme/src/: lib.rs
crates/zhazba_ui/: Cargo.toml
crates/zhazba_ui/src/: lib.rs
