[workspace]
default-members = ["crates/zhazba"]
members = [
  "crates/zhazba",
  "crates/zhazba_buffer",
  "crates/zhazba_config",
  "crates/zhazba_editor",
  "crates/zhazba_lua",
  "crates/zhazba_models",
  "crates/zhazba_theme",
  "crates/zhazba_ui",
]
resolver = "2"


[workspace.dependencies]
# Internal crates
zhazba_buffer = { path = "crates/zhazba_buffer" }
zhazba_config = { path = "crates/zhazba_config" }
zhazba_editor = { path = "crates/zhazba_editor" }
zhazba_lua = { path = "crates/zhazba_lua" }
zhazba_models = { path = "crates/zhazba_models" }
zhazba_theme = { path = "crates/zhazba_theme" }


# External packages
anyhow = { version = "1.0.95" }
clap = { version = "4.5.26", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.3" }
mlua = { version = "0.10.2", features = ["lua54", "vendored"] }
ratatui = { version = "0.29.0" }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
